# MiniTorch

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
cpp/include/: tensor.h
cpp/src/: bindings.cpp  tensor.cpp
docs/: getting_started.md
examples/: cifar10.py  mnist.py
kernels/cpu/: ops.cpp  ops.h
kernels/cuda/: ops.cu  ops.h
python/minitorch/: __init__.py  autograd.py  data.py  optim.py  tensor.py  utils.py
python/minitorch/nn/: __init__.py  functional.py  modules.py
tests/: test_autograd.py  test_nn.py  test_optim.py  test_tensor.py
